--- a/index_fixed.html
+++ b/index_fixed.html
@@ -636,7 +636,7 @@
                   <div class="fact">
                     <div class="fact-title">Экспертиза</div>
                     <div class="fact-text">
-                      A/B-тесты, статистика, продуктовые кейсы, собеседования аналитиков]]
+                      A/B-тесты, статистика, продуктовые кейсы, собеседования аналитиков
                     </div>
                   </div>
 
