--- a/index_fixed.html
+++ b/index_fixed.html
@@ -485,7 +485,7 @@
 
     <div class="hdr-sub">
       <div class="crumbs">
-        <div class="path">notebook / shelter_analytics / mentoring.ipynb</div>
+        <div class="path">notebook / vlad.sheremetev / mentoring.ipynb</div>
         <!-- ✅ quick links removed -->
       </div>
     </div>
